--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,6 +51,7 @@ book:
   - chapters/introduction.qmd
   - chapters/whole-game.qmd
   - part: "Preparation"
+  - chapters/initial-data-splitting.qmd
   - part: "Optmization"
   - part: "Classification"  
   - part: "Regression"  
