--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,8 @@ execute:
   # warning: false
   echo: false
 
+resources:
+  - CNAME
 
 ## Define book style and declare qmd files to process
 book:
