Categorical predictors companion chapter (#5)
* first work on categorical encodings

* collapsing code

* draft of the categorical chapter

* fix inline text chunks

* fill in some details

* update packages

* better stubs

* small updates

* update link

---------

Co-authored-by: ‘topepo’ <‘mxkuhn@gmail.com’>

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -55,6 +55,7 @@ book:
   - part: "Preparation"
   - chapters/initial-data-splitting.qmd
   - chapters/numeric-predictors.qmd
+  - chapters/categorical-predictors.qmd  
   - part: "Optmization"
   - part: "Classification"  
   - part: "Regression"  
