--- a/_quarto.yml
+++ b/_quarto.yml
@@ -56,6 +56,7 @@ book:
   - chapters/initial-data-splitting.qmd
   - chapters/numeric-predictors.qmd
   - chapters/categorical-predictors.qmd  
+  - chapters/embeddings.qmd  
   - part: "Optmization"
   - part: "Classification"  
   - part: "Regression"  
