--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     jsonlite,
     kableExtra,
     knitr,
+    mixOmics,
     modeldata (>= 1.1.0),
     modeldatatoo,
     pak,
@@ -60,7 +61,7 @@ Suggests:
     testthat (>= 3.0.0)
 Remotes:
     r-lib/downlit,
-    tidymodels/textrecipes
+    mixOmicsTeam/mixOmics
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
