--- a/_quarto.yml
+++ b/_quarto.yml
@@ -58,6 +58,7 @@ book:
   - chapters/categorical-predictors.qmd  
   - chapters/interactions-nonlinear.qmd
   - part: "Optmization"
+  - chapters/overfitting.qmd
   - part: "Classification"  
   - part: "Regression"  
   - part: "Characterization"  
