--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Imports:
     knitr,
     lme4,
     Matrix,
+    mixOmics,
     modeldata (>= 1.1.0),
     modeldatatoo,
     pak,
@@ -65,7 +66,7 @@ Suggests:
     testthat (>= 3.0.0)
 Remotes:
     r-lib/downlit,
-    tidymodels/textrecipes
+    mixOmicsTeam/mixOmics
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
