--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,6 +59,7 @@ book:
   - chapters/embeddings.qmd  
   - chapters/interactions-nonlinear.qmd
   - part: "Optmization"
+  - chapters/overfitting.qmd
   - part: "Classification"  
   - part: "Regression"  
   - part: "Characterization"  
