--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,6 +54,7 @@ book:
   - chapters/whole-game.qmd
   - part: "Preparation"
   - chapters/initial-data-splitting.qmd
+  - chapters/missing-data.qmd
   - chapters/numeric-predictors.qmd
   - chapters/categorical-predictors.qmd  
   - chapters/embeddings.qmd  
