more computing content

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -61,6 +61,7 @@ book:
   - chapters/interactions-nonlinear.qmd
   - part: "Optmization"
   - chapters/overfitting.qmd
+  - chapters/resampling.qmd
   - part: "Classification"  
   - part: "Regression"  
   - part: "Characterization"  
