--- a/_quarto.yml
+++ b/_quarto.yml
@@ -63,6 +63,7 @@ book:
   - chapters/overfitting.qmd
   - chapters/resampling.qmd
   - chapters/grid.qmd
+  - chapters/iterative-search.qmd
   - part: "Classification"  
   - part: "Regression"  
   - part: "Characterization"  
