--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Imports:
     brulee (>= 0.2.0),
     caret,
     cli,
+    colino,
     Cubist,
     devtools,
     dials,
@@ -81,7 +82,8 @@ Suggests:
     testthat (>= 3.0.0)
 Remotes:
     mixOmicsTeam/mixOmics,
-    r-lib/downlit
+    r-lib/downlit,
+    stevenpawley/colino
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
