--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Imports:
     hardhat (>= 1.2.0.9000),
     hstats,
     igraph,
+    janitor,
     jsonlite,
     kableExtra,
     knitr,
@@ -43,10 +44,12 @@ Imports:
     pak,
     parallel,
     parsnip,
+    partykit,
     patchwork,
     pillar,
     probably (>= 0.1.0.9007),
     purrr,
+    QSARdata,
     ragg,
     ranger,
     RANN,
