update some html anchors and section titles

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,9 @@ Imports:
     fastICA,
     finetune,
     forested,
+    future,
+    future.mirai,
+    GA,
     ggplot2,
     gt,
     hardhat (>= 1.2.0.9000),
