--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,9 @@ Imports:
     fastICA,
     finetune,
     forested,
+    future,
+    future.mirai,
+    GA,
     ggplot2,
     gt,
     hardhat (>= 1.2.0.9000),
@@ -85,8 +88,8 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Remotes:
-    mixOmicsTeam/mixOmics,
     r-lib/downlit,
+    tidymodels/recipes@v1.2.1,
     stevenpawley/colino
 Config/testthat/edition: 3
 Encoding: UTF-8
