--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,10 @@ License: CC BY-SA (see license file)
 Imports: 
     aorsf,
     bestNormalize,
+    broom,
+    broom.mixed,
     brulee (>= 0.2.0),
+    C50,
     caret,
     cli,
     colino,
@@ -18,11 +21,13 @@ Imports:
     devtools,
     dials,
     dimRed,
+    discrim,
     doParallel,
     downlit,
     dplyr,
     e1071,
     embed,
+    emmeans,
     fastICA,
     finetune,
     forested,
@@ -30,6 +35,7 @@ Imports:
     future.mirai,
     GA,
     ggplot2,
+    glmnet,
     gt,
     hardhat (>= 1.2.0.9000),
     hstats,
@@ -37,6 +43,7 @@ Imports:
     janitor,
     jsonlite,
     kableExtra,
+    klaR,
     knitr,
     lme4,
     Matrix,
@@ -72,6 +79,7 @@ Imports:
     textrecipes,
     tibble,
     tidymodels,
+    tidyposterior,
     tidyr,
     tidysdm,
     tinytex,
